src/test/ui/coercion/coerce-mut.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/coerce-mut.rs:5:5
   |
LL |     f(&x);
   |     ^^--^
   |       |
   |       expected `&mut i32`, found `&{integer}`
   |
note: function defined here
  --> $DIR/coerce-mut.rs:1:4
   |
LL | fn f(x: &mut i32) {}
   |    ^ -----------
help: provide an argument of the correct type
   |
LL |     f({&mut i32});
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
